<resources>
    <string name="app_name">RoutineManagerApp</string>
    <string name="label_title_main">Tarefas</string>
    <string name="label_create_task">Criar Tarefa</string>
    <string name="label_title">Título</string>
    <string name="label_date">Data</string>
    <string name="label_hour">Hora</string>
    <string name="label_cancel">Cancelar</string>
    <string name="placeholder_title_item">passear com cachorro invisivel</string>
    <string name="placeholder_date_time_item">10/10/2110 10:10</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_title_edit">Editar tarefa</string>
    <string name="empty_state_title">Ops! Você não possui\n nenhuma tarefa hoje</string>
</resources>